// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/tree/demo/checkexpand.md correctly 1`] = `
<div
  class="c7n-row"
>
  <div
    class="c7n-col-12"
  >
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin c7n-spin-spinning"
      >
        <div
          class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
        >
          <div
            class="c7n-progress-inner"
          >
            <svg
              viewBox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c7n-spin-container c7n-spin-blur"
      >
        <div
          class="c7n-tree c7n-tree-show-line"
        >
          <div
            role="tree"
          >
            <input
              style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
              tabindex="0"
              value=""
            />
          </div>
          <div
            checkable="1"
            class="c7n-tree-list"
          >
            <div>
              <div
                class="c7n-tree-list-holder-inner"
                style="display:flex;flex-direction:column"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c7n-col-12"
  >
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin c7n-spin-spinning"
      >
        <div
          class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
        >
          <div
            class="c7n-progress-inner"
          >
            <svg
              viewBox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c7n-spin-container c7n-spin-blur"
      >
        <div
          class="c7n-tree c7n-tree-show-line"
        >
          <div
            role="tree"
          >
            <input
              style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
              tabindex="0"
              value=""
            />
          </div>
          <div
            checkable="1"
            class="c7n-tree-list"
          >
            <div>
              <div
                class="c7n-tree-list-holder-inner"
                style="display:flex;flex-direction:column"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components-pro/tree/demo/dataset.md correctly 1`] = `
<div
  class="c7n-spin-nested-loading"
>
  <div
    class="c7n-spin c7n-spin-spinning"
  >
    <div
      class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
    >
      <div
        class="c7n-progress-inner"
      >
        <svg
          viewBox="0 0 50 50"
        >
          <circle
            cx="25"
            cy="25"
            r="20"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c7n-spin-container c7n-spin-blur"
  >
    <div
      class="c7n-tree c7n-tree-icon-hide"
    >
      <div
        role="tree"
      >
        <input
          style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
          tabindex="0"
          value=""
        />
      </div>
      <div
        checkable="1"
        class="c7n-tree-list"
      >
        <div>
          <div
            class="c7n-tree-list-holder-inner"
            style="display:flex;flex-direction:column"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components-pro/tree/demo/selection.md correctly 1`] = `
<div
  class="c7n-row"
>
  <div
    class="c7n-col-12"
  >
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin c7n-spin-spinning"
      >
        <div
          class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
        >
          <div
            class="c7n-progress-inner"
          >
            <svg
              viewBox="0 0 50 50"
            >
              <circle
                cx="25"
                cy="25"
                r="20"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="c7n-spin-container c7n-spin-blur"
      >
        <div
          class="c7n-tree c7n-tree-show-line"
        >
          <div
            role="tree"
          >
            <input
              style="width:0;height:0;display:flex;overflow:hidden;opacity:0;border:0;padding:0;margin:0"
              tabindex="0"
              value=""
            />
          </div>
          <div
            checkable="1"
            class="c7n-tree-list"
          >
            <div>
              <div
                class="c7n-tree-list-holder-inner"
                style="display:flex;flex-direction:column"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
